# abstalg-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: additive_group.rs  approx_floats.rs  checked_ints.rs  checked_uints.rs  divisibility_lattice.rs  divisibility_order.rs  domain.rs  integers.rs  lib.rs  matrix_ring.rs  modular_ints.rs  multiplicative_group.rs  naturals.rs  permutations.rs  polynomial_algebra.rs  polynomials.rs  quotient_field.rs  quotient_ring.rs  reduced_fractions.rs  ring.rs  test.rs  traits.rs  two_element_algebra.rs  vector_algebra.rs
