[package]
name = "abstalg"
description = "Abstract algebraic structures for Rust" 
version = "0.1.0"
authors = ["Miklos Maroti <mmaroti@gmail.com>"]
edition = "2018"
repository = "https://github.com/mmaroti/abstalg-rs/"
license = "MIT"

[dependencies]
num-bigint = "0.3"
num-traits = "0.2"
num-integer = "0.1"
